test and correction of all the routes
